--- a/src/App.css
+++ b/src/App.css
@@ -35,8 +35,16 @@
 
 .card {
   padding: 2em;
+  align-items: center;
 }
 
 .read-the-docs {
   color: #888;
+}
+
+.main {
+  align-items: center;
+  display: flex;
+  
+
 }
