--- a/src/index.css
+++ b/src/index.css
@@ -86,7 +86,18 @@ button:focus-visible {
 }
 
 .conteiner-profile {
-  width: 1800px;
-  height: 1700px;
+  width: 300%;
+  height: 300%;
 
+
+}
+.ask-conteiner {
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  height: 50%;
+  width: 50%;
+  transform: translate(-50%, -50%);
+  max-height: 100%;
+  font-size: larger;
 }
